<resources>
    <string name="app_name">备件管理系统</string>
    <string name="search">搜索</string>
    <string name="scan">扫码</string>
    <string name="scanning">正在扫描</string>

    <string name="title_activity_search">搜索</string>
    <string name="cancel">取消</string>
    <string name="title_activity_login">登陆</string>

    <!-- 底部导航-->
    <string name="main_tab_name_home">主页</string>
    <string name="main_tab_name_backup">物资台账</string>
    <string name="main_tab_name_outLib">备件管理</string>
    <string name="main_tab_name_inLib">工具管理</string>
    <string name="main_tab_name_more">更多</string>

    <!-- Strings related to login -->
    <string name="prompt_num">工号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>


    <string name="more_statistics">更多统计</string>
    <string name="title_activity_scan">扫码</string>
    <string name="stocking">盘点</string>
    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="tip_double_click_exit">再点一次退出</string>
    <string name="company">北京东方亮点信息技术有限公司</string>
    <string name="backup_list">数据列表</string>
    <string name="change_ip">更改网络地址</string>
    <string name="double_exit">再点一次退出</string>
    <string name="loan_in">还工具</string>
    <string name="loan_out">借工具</string>
    <string name="exit_account">退出当前账号</string>
    <string name="clear_cache">清除缓存</string>
    <string name="check_update">检查更新</string>
    <string name="confirm">确定</string>

    <string name="tool">工具</string>
    <string name="spare">备件</string>


</resources>
